@@ -55,5 +55,6 @@ Trunk (unreleased changes)
      HADOOP-1466 Clean up visibility and javadoc issues in HBase.
  33. HADOOP-1538 Provide capability for client specified time stamps in HBase
      HADOOP-1466 Clean up visibility and javadoc issues in HBase.
+ 34. HADOOP-1589 Exception handling in HBase is broken over client server connections
 
 
